# cosy-riech-o-mat

./: README.md  cosy_riech_o_mat.m  meson.build  test.m  test_riech_o_mat.m  test_riech_o_mat1.m
C-backend/: .gitignore  compile.sh  riech-o-mat-backend-serial.c
C_language/: .gitignore  test-open-valve.c
docs/: report.md  serial-port.odt
matlab/: cosy_riech_o_mat.m
src/: cosy-riech-o-mat.c  crom-serial.c  crom-serial.h  meson.build  riech-o-mat-backend-serial.c
tests-C-language/: .gitignore  compile.sh  meson.build  test-open-valve.c  test-parallel-port.c
tests-matlab/: test_riech_o_mat2.m
